--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -77,7 +77,14 @@ header{
     .heading{
       font-size: 23px;
     }.hero-section{
-      font-size: 18px;
+      font-size: 16px;
+    }
+    .home,
+    .salon,
+    .clothing,
+    .about,
+    .contact{
+      margin-left: 13px;
     }
 }
   
